# toshi-hazard-store

./: .bumpversion.cfg  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  index.html  makefile  mkdocs.yml  objects.inv  pyproject.toml  setup.cfg  sitemap.xml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: dev.yml  preview.yml  release.yml
api/: index.html
changelog/: index.html
contributing/: index.html
docs/: api.md  cli.md  configuration.md  gridded_hazard_query_api.md  hazard_disagg_query_api.md  hazard_query_api.md  installation.md  sqlite_adapter_usage.md  usage.md
docs/cli/: legacy.md  store_hazard_v4.md  ths_r4_defrag.md  ths_r4_filter_dataset.md  ths_r4_import.md  ths_r4_migrate.md  ths_r4_query.md  ths_r4_sanity.md
docs/domain_model/: arrow_sanity_testing.md  demo_thp_stategies.md  disaggregation_models.md  gridded_hazard_models.md  openquake_models.md  proposed_hazard_models.md  revision _4_migration_ testing.md  revision_4_migration_testing.md
docs/migration/: arrow_sanity_testing.md  hazard_import_processing-may-2024.md  revision_4_disagg_testing.md
installation/: index.html
nzshm_oq_export/: __init__.py  config.py  model.py  models.py  query.py
scripts/: THS_R4_import.py  __init__.py  aggregate.py  cdctest.py  get_hazard.py  get_oq_gsims.sh  nz_binned_demo.py  query_meta.py  query_rlz.py  store_hazard.py  store_hazard_v3.py  store_hazard_v4.py  test_ths_v2.py  testing_ths_v2.py  ths_arrow_compaction.py  ths_cache.py  ths_r4_defrag.py  ths_r4_filter_dataset.py  ths_r4_import.py  ths_r4_migrate.py  ths_r4_query.py  ths_r4_sanity.py  ths_testing.py  ths_v2.py
scripts/core/: __init__.py  click_command_echo_settings.py
scripts/legacy/: README.md  SLT_37_GRANULAR_RELEASE_1.py  demo.py  nz_binned_demo.py  store_hazard_v3.py  testing_ths_v2.py  ths_cache.py  ths_v2.py
scripts/migration/: GT_HAZ_IDs_R2VuZXJhbFRhc2s6MTMyODQxNA==.json  demo_arrow_query_strategies.py  demo_thp_arrow_strategies.py  ths_r4_sanity.local.csv  ths_r4_sanity.local_by_nloc_001.csv  ths_r4_sanity.prod.csv  ths_r4_sanity.py  ths_rev4_to_arrow.py
scripts/revision_4/: aws_ecr_docker_image.py  oq_config.py  toshi_api_client.py
search/: search_index.json
tests/: MOCK  __init__.py  conftest.py  test_attributes.py  test_gridded_hazard_model.py  test_hazard_aggregation_to_csv.py  test_model_cache_store.py  test_motion_comp.py  test_nzshm_oq_export.py  test_oq_import.py  test_oq_rlz_rebase_pickling.py  test_pynamo_disagg_models.py  test_pynamo_models.py  test_pynamo_models_oq_meta.py  test_pynamo_models_oq_rlz.py  test_pynamo_models_v3.py  test_query.py  test_query_disaggs.py  test_query_hazard_agg_v3.py  test_query_hazard_agg_vs30_fix.py  test_query_hazard_caching.py  test_query_meta.py  test_query_rlzs.py  test_query_rlzs_v3.py  test_query_rlzs_vs30_fix.py  test_site_specific_vs30.py  test_toshi_hazard_store.py  test_transform.py  test_utils.py
tests/fixtures/: sample_HazardRealizationCurve.json
tests/fixtures/aggregation/: SLT_TAG_FINAL.json  source_branches.json
tests/fixtures/disaggregation/: bins_SLT_v8_gmm_v2_FINAL_-39.000~175.930_750_SA(0.5)_86_eps-dist-mag-trt.npy  bins_SLT_v8_gmm_v2_FINAL_-42.780~171.540_400_SA(1.5)_63_eps-dist-mag-trt.npy  calc_1.hdf5  deagg_SLT_v8_gmm_v2_FINAL_-39.000~175.930_750_SA(0.5)_86_eps-dist-mag-trt.npy  deagg_SLT_v8_gmm_v2_FINAL_-42.780~171.540_400_SA(1.5)_63_eps-dist-mag-trt.npy
tests/fixtures/oq_import/: calc_9.hdf5  meta  rlzs
tests/model_revision_4/: conftest.py  test_arrow_extract_direct.py  test_hazard_models.py  test_oq_import_v4.py  test_pynamo_models.py
tests/openquake/: test_oq_import.py  test_transform.py
tests/scripts/: test_store_hazard_v3.py
tests/v2/: test_pynamo_models.py
toshi_hazard_store/: __init__.py  config.py  data_functions.py  deaggregate_hazard_mp.py  export.py  gridded_hazard_query.py  locations.py  model.py  multi_batch.py  pynamodb_settings.py  query.py  query_v3.py  transform.py  utils.py
toshi_hazard_store/branch_combinator/: SLT_37_GRANULAR_RELEASE_1.py  SLT_37_GRANULAR_RELEASE_NB.py  SLT_37_GT.py  SLT_37_GT_VS400_DATA.py  SLT_37_GT_VS400_gsim_DATA.py  SLT_TAG_FINAL.py  SLT_test1.py  branch_combinator.py
toshi_hazard_store/db_adapter/: __init__.py  dynamic_base_class.py  pynamodb_adapter_interface.py
toshi_hazard_store/db_adapter/sqlite/: __init__.py  pynamodb_sql.py  sqlite_adapter.py  sqlite_store.py
toshi_hazard_store/db_adapter/test/: conftest.py  model_fixtures.py  module_model_rebase_fixtures.py  test_adapter_batched.py  test_adapter_custom_field_types.py  test_adapter_field_types.py  test_adapter_model_count.py  test_adapter_setup.py  test_adapter_unique_constraints.py  test_model_base_is_dynamic.py  test_module_model_base_is_dynamic.py  test_pynamo_versioning.py  test_pynamodb_sql.py  test_rebase_class_pickling.py  test_rebase_roundtrip.py
toshi_hazard_store/model/: __init__.py  constraints.py  disagg_models.py  gridded_hazard.py  location_indexed_model.py  openquake_models.py  openquake_v1_model.py  openquake_v2_model.py  openquake_v3_model.py
toshi_hazard_store/model/attributes/: __init__.py  attributes.py  enum_attribute.py  enum_constrained_attribute.py
toshi_hazard_store/model/caching/: __init__.py  cache_store.py  model_cache_mixin.py
toshi_hazard_store/model/revision_4/: OLD_realizations.py  __init__.py  extract_classical_hdf5.py  extract_disagg.py  extract_disagg_hdf5.py  hazard_aggregate_curve.py  hazard_models.py  hazard_realization_curve.py  migrate_v3_to_v4.py  pyarrow_aggr_dataset.py  pyarrow_dataset.py  pyarrow_write_metadata.py  sanity_csv_vs_hdf5.py
toshi_hazard_store/oq_import/: __init__.py  export.py  export_v1.py  export_v3.py  export_v4.py  migrate_v3_to_v4.py  oq_manipulate_hdf5.py  parse_oq_realizations.py
toshi_hazard_store/query/: __init__.py  disagg_queries.py  gridded_hazard_query.py  hazard_query.py  hazard_query_rev4.py
toshi_hazard_store/v2/db_adapter/: __init__.py  dynamic_base_class.py  pynamodb_adapter_interface.py  pynamodb_adapter_mixin.py  sqlite_adapter.py
usage/: index.html
(+9 files in other folders)
